--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-ejs": "^3.0.1",
     "gulp-postcss": "^7.0.0",
+    "gulp-shell": "^0.6.3",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^2.1.2",
     "path": "^0.12.7",
