--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss-mixins": "^6.0.0",
     "postcss-modules": "^0.7.0",
     "postcss-nesting": "^3.0.0",
+    "precss": "^1.4.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0"
