--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ description: 'Write an awesome description for your new site here. You can edit 
   results) and in your feed.xml site description.
 
 '
-baseurl: 
+baseurl:
 url: http://scottnesham.com
 twitter_username: sevenfoxes
 github_username: sevenfoxes
@@ -32,3 +32,4 @@ exclude:
 - src
 - yarn.lock
 - package.json
+- .vscode
