--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,11 @@ collections:
 email: sanesham@gmail.com
 description: 'Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for Google search
-  results) and in your feed.xml site description.
-
-'
+  results) and in your feed.xml site description.'
+defaults:
+  -
+    values:
+      layout: 'post'
 baseurl:
 url: http://scottnesham.com
 twitter_username: sevenfoxes
