--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "eslint-plugin-flowtype": "^2.32.1",
     "flow-bin": "^0.46.0",
     "fs": "^0.0.1-security",
-    "gulp": "^3.9.1",
+    "gulp": "gulpjs/gulp.git#4.0",
     "gulp-babel": "^6.1.2",
+    "gulp-concat-css": "^2.3.0",
     "gulp-ejs": "^3.0.1",
     "gulp-postcss": "^7.0.0",
     "gulp-shell": "^0.6.3",
@@ -30,6 +31,8 @@
     "postcss-import": "^9.1.0",
     "postcss-mixins": "^6.0.0",
     "postcss-modules": "^0.7.0",
+    "postcss-namespace": "^1.1.1",
+    "postcss-nested": "^2.0.2",
     "postcss-nesting": "^3.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
