--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ email: sanesham@gmail.com
 description: 'Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for Google search
   results) and in your feed.xml site description.'
+permalink: pretty
 defaults:
   -
     values:
