--- a/_config.yml
+++ b/_config.yml
@@ -12,16 +12,25 @@ collections:
     title: customers
     output: true
 defaults:
-- scope:
-    path: ''
-  values:
-    layout: post
+  -
+    scope:
+      path: ''
+      type: 'posts'
+    values:
+      layout: post
+  -
+    scope:
+      path: ''
+      type: 'pages'
+    values:
+      layout: page
+      order: 0
 email: sanesham@gmail.com
 description: Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for Google search
   results) and in your feed.xml site description.
 permalink: pretty
-baseurl: 
+baseurl:
 url: http://scottnesham.com
 twitter_username: sevenfoxes
 github_username: sevenfoxes
