--- a/package.json
+++ b/package.json
@@ -1,21 +1,44 @@
 {
   "dependencies": {
-    "autoprefixer": "^7.0.1",
     "babel": "^6.23.0",
     "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
+    "es6-promise": "^4.1.0",
+    "flow": "^0.2.3",
+    "flow-bin": "^0.46.0",
+    "flow-typed": "^2.1.2",
+    "isomorphic-fetch": "^2.2.1",
+    "jest": "^20.0.4",
+    "nock": "^9.0.13",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-hot-loader": "^1.3.1",
+    "react-redux": "^5.0.5",
+    "react-redux-toastr": "^6.2.7",
+    "react-router": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-easy-actions": "^0.4.0",
+    "redux-mock-store": "^1.2.3",
+    "redux-saga": "^0.15.3",
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^2.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^7.0.1",
+    "babel-eslint": "^7.2.3",
     "babelify": "^7.3.0",
     "browser-sync": "^2.18.8",
     "browserify": "^14.3.0",
-    "connect-modrewrite": "^0.10.1",
     "eslint": "^3.19.0",
     "eslint-plugin-flowtype": "^2.32.1",
-    "flow-bin": "^0.46.0",
+    "eslint-plugin-react": "^7.0.1",
     "fs": "^0.0.1-security",
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-babel": "^6.1.2",
@@ -38,6 +61,7 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0"
+
   },
   "name": "tanium-skin",
   "version": "1.0.0",
