--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flow": "^0.2.3",
     "flow-bin": "^0.46.0",
     "flow-typed": "^2.1.2",
+    "history": "^4.6.1",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^20.0.4",
     "nock": "^9.0.13",
@@ -39,6 +40,7 @@
     "eslint": "^3.19.0",
     "eslint-plugin-flowtype": "^2.32.1",
     "eslint-plugin-react": "^7.0.1",
+    "expect": "^1.20.2",
     "fs": "^0.0.1-security",
     "gulp": "gulpjs/gulp.git#4.0",
     "gulp-babel": "^6.1.2",
@@ -61,7 +63,6 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0"
-
   },
   "name": "tanium-skin",
   "version": "1.0.0",
