--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "autoprefixer": "^7.0.1",
     "babel": "^6.23.0",
     "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-env": "^1.4.0",
@@ -10,14 +12,34 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.3.0",
     "es6-promise": "^4.1.0",
+    "expect": "^1.20.2",
     "flow": "^0.2.3",
     "flow-bin": "^0.46.0",
     "flow-typed": "^2.1.2",
+    "fs": "^0.0.1-security",
+    "gulp": "gulpjs/gulp.git#4.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat-css": "^2.3.0",
+    "gulp-ejs": "^3.0.1",
+    "gulp-postcss": "^7.0.0",
+    "gulp-shell": "^0.6.3",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-uglify": "^2.1.2",
     "history": "^4.6.1",
     "isomorphic-fetch": "^2.2.1",
-    "jest": "^20.0.4",
-    "nock": "^9.0.13",
+    "path": "^0.12.7",
+    "postcss-css-variables": "^0.7.0",
+    "postcss-easy-import": "^2.0.0",
+    "postcss-extend": "^1.0.5",
+    "postcss-import": "^9.1.0",
+    "postcss-mixins": "^6.0.0",
+    "postcss-modules": "^0.7.0",
+    "postcss-namespace": "^1.1.1",
+    "postcss-nested": "^2.0.2",
+    "postcss-nesting": "^3.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "^1.3.1",
@@ -29,40 +51,18 @@
     "redux-mock-store": "^1.2.3",
     "redux-saga": "^0.15.3",
     "redux-thunk": "^2.2.0",
-    "styled-components": "^2.0.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "^7.0.1",
-    "babel-eslint": "^7.2.3",
-    "babelify": "^7.3.0",
-    "browser-sync": "^2.18.8",
-    "browserify": "^14.3.0",
-    "eslint": "^3.19.0",
-    "eslint-plugin-flowtype": "^2.32.1",
-    "eslint-plugin-react": "^7.0.1",
-    "expect": "^1.20.2",
-    "fs": "^0.0.1-security",
-    "gulp": "gulpjs/gulp.git#4.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat-css": "^2.3.0",
-    "gulp-ejs": "^3.0.1",
-    "gulp-postcss": "^7.0.0",
-    "gulp-shell": "^0.6.3",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^2.1.2",
-    "path": "^0.12.7",
-    "postcss-css-variables": "^0.7.0",
-    "postcss-easy-import": "^2.0.0",
-    "postcss-extend": "^1.0.5",
-    "postcss-import": "^9.1.0",
-    "postcss-mixins": "^6.0.0",
-    "postcss-modules": "^0.7.0",
-    "postcss-namespace": "^1.1.1",
-    "postcss-nested": "^2.0.2",
-    "postcss-nesting": "^3.0.0",
+    "styled-components": "^2.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.18.8",
+    "eslint": "^3.19.0",
+    "eslint-plugin-flowtype": "^2.32.1",
+    "eslint-plugin-react": "^7.0.1",
+    "jest": "^20.0.4",
+    "nock": "^9.0.13"
   },
   "name": "tanium-skin",
   "version": "1.0.0",
