--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "devDependencies": {
     "browser-sync": "^2.18.8",
+    "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-plugin-flowtype": "^2.32.1",
     "eslint-plugin-react": "^7.0.1",
@@ -69,7 +70,8 @@
   "main": "Gulpfile.js",
   "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "npm run test -- --watch",
     "start": "gulp",
     "flow": "flow"
   }
